Merged PR 43472: #67877 Added legs in routing response & include fraction of each leg link
#62817 Added legs in routing response & include fraction of each leg link

Related work items: #67877